# tillich-briefe-data

./: .flake8  .gitignore  README.md  add_orcids.py  analyze_tags.py  fetch_data.py  fix_ids.py  fix_letter_ref__issue_17.py  main.py  pyproject.toml  rename_bibl_refs.py  requirements.txt  rs_flatten.xsl  tillich-briefe-data.xpr  validate-xml.sh  validate_xml.py
.github/workflows/: test.yml  validate-xml.yml
data/editions/: 13_22.03.1902_Tillich, Karl_Tillich, Paul.xml  1934.02.01 P. Tillich an E. Tillich.xml  1934.04.09 P. Tillich an H. Tillich.xml  1934.04.10 P. Tillich an H. Tillich.xml  1934.04.12. (1) P. Tillich an H. Tillich.xml  1934.04.12. (2) P. Tillich an H. Tillich.xml  195_26.01.1922_Tillich, Paul_Tillich, Hannah.xml  204_24.04.1922_Tillich, Paul_Tillich, Hannah.xml  225_21.01.1922_Tillich, Paul_Tillich, Hannah.xml  233_01.01.1923_Tillich, Paul_Tillich, Hannah.xml  237_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  238_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  239_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  240_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  241_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  242_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  244_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  248_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  250_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  253_01.01.1922_Tillich, Paul_Tillich, Hannah.xml  260_01.01.1921_Tillich, Paul_Tillich, Hannah.xml  261_01.01.1921_Tillich, Paul_Tillich, Hannah.xml  (+1437 more)
data/indices/: listperson.xml
odd/: odd2schematron.xsl  tillich-briefe.odd
schematron/: schematron.sch
(+1 files in other folders)
