[project]
name = "tillich-briefe-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acdh-tei-pyutils>=1.6",
    "acdh-xml-validator>=1.0.0",
    "pyschematron>=1.1.8",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.4",
]
